[package]
name = "actix_derive"
version = "0.2.0"
authors = ["Callym <hi@callym.com>", "Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actor framework for Rust"
readme = "README.md"
keywords = ["actor", "futures", "actix", "async", "tokio"]
homepage = "https://github.com/actix/actix-derive/"
repository = "https://github.com/actix/actix-derive.git"
documentation = "https://docs.rs/actix-derive/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
quote = "0.3"
rand = "0.3"
syn = { version="0.11", features=["full"] }

[build-dependencies]
version_check = "0.1"
